examples/test/testpolicy10872.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10872
  namespace: namespace252
spec:
  podSelector:
    matchLabels:
      key44: value32
      key39: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value30
          key34: value37
          key46: value5
      podSelector:
        matchLabels:
          key25: value49
          key45: value18
          key37: value39
